src/test/ui/issues/issue-41139.nll.stderr
error[E0161]: cannot move a value of type dyn Trait: the size of dyn Trait cannot be statically determined
  --> $DIR/issue-41139.rs:6:23
   |
LL |     let t : &Trait = &get_function()();
   |                       ^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0161`.
